# rotating-buffer

./: Cargo.toml  README.md
examples/: read_to_eof.rs
src/: lib.rs
